Can now run source from any directory